k8s/statuspage/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statuspage-web
  namespace: statuspage
  labels:
    workload: StatusPage-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      workload: StatusPage-ui
  template:
    metadata:
      labels:
        workload: StatusPage-ui
    spec:
      containers:
        - name: statuspage-frontend
          image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/nach-hi/status-page:fc1d41d7b00c5330829e5b9e15d7f4b65cb0eb51
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 512Mi
              cpu: 200m
            limits:
              memory: 1024Mi
              cpu: 1000m
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 30
      imagePullSecrets:
      - name: regcred
