k8s/statuspage/StatusPageIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: statuspage-ingress
  namespace: statuspage
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: ingress-class
  rules:
    - host: sp.nach-hi.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: statuspage-svc
                port:
                  number: 80
